--- a/src/html/index.html
+++ b/src/html/index.html
@@ -38,7 +38,7 @@
                     <span>|</span>
                     <a href="#" class="download-app">下载app
                         <div class="pic">
-                            <img src="https://i1.mifile.cn/f/i/17/appdownload/download.png?1" alt="">
+                            <img class="lazy"data-original="https://i1.mifile.cn/f/i/17/appdownload/download.png?1" alt="">
                             小米商城APP
                         </div>
                     </a>
@@ -208,13 +208,13 @@
                     </ul>
                 </div>
                 <div class="item-2">
-                    <a href="#"><img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/e5f20a62c3d5b3d6806bd51ab6c5dd12.jpg?w=632&h=340" alt=""></a>
+                    <a href="#"><img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/e5f20a62c3d5b3d6806bd51ab6c5dd12.jpg?w=632&h=340" alt=""></a>
                 </div>
                 <div class="item-3">
-                    <a href="#"><img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/8a43378b96501d7e227a9018fe2668c5.jpg?w=632&h=340" alt=""></a>
+                    <a href="#"><img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/8a43378b96501d7e227a9018fe2668c5.jpg?w=632&h=340" alt=""></a>
                 </div>
                 <div class="item-4">
-                    <a href="#"><img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/793913688bfaee26b755a0b0cc8575fd.jpg?w=632&h=340" alt=""></a>
+                    <a href="#"><img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/793913688bfaee26b755a0b0cc8575fd.jpg?w=632&h=340" alt=""></a>
                 </div>
             </div>
         </div>
@@ -231,7 +231,7 @@
                 <div class="count">
                     <div>14:00 场</div>
                     <div>
-                        <img src="data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAACIAAAA1CAYAAAAklDnhAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJ
+                        <img class="lazy" data-original="data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAACIAAAA1CAYAAAAklDnhAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJ
                         bWFnZVJlYWR5ccllPAAAAyNpVFh0WE1MOmNvbS5hZG9iZS54bXAAAAAAADw/eHBhY2tldCBiZWdp
                         bj0i77u/IiBpZD0iVzVNME1wQ2VoaUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6
                         eD0iYWRvYmU6bnM6bWV0YS8iIHg6eG1wdGs9IkFkb2JlIFhNUCBDb3JlIDUuNS1jMDE0IDc5LjE1
@@ -272,7 +272,7 @@
                 <div class="product">
                     <a href="#" class="content">
                         <div class="picture">
-                            <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/563ced6ca5112591d4c19f7133e8847b.png?thumb=1&w=200&h=200&f=webp&q=90" alt="">
+                            <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/563ced6ca5112591d4c19f7133e8847b.png?thumb=1&w=200&h=200&f=webp&q=90" alt="">
                         </div>
                         <h3>Pro 15增强版 i5</h3>
                         <p class="desc">再次突破强大</p>
@@ -285,7 +285,7 @@
                 <div class="product">
                     <a href="#" class="content">
                         <div class="picture">
-                            <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/53c97a38921965729cbcb65fca605ab0.png?thumb=1&w=200&h=200&f=webp&q=90" alt="">
+                            <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/53c97a38921965729cbcb65fca605ab0.png?thumb=1&w=200&h=200&f=webp&q=90" alt="">
                         </div>
                         <h3>HITH智能足浴器Q3 有线版 旋钮款 旋钮款</h3>
                         <p class="desc">D舒适按摩，精准恒温足浴</p>
@@ -298,7 +298,7 @@
                 <div class="product">
                     <a href="#" class="content">
                         <div class="picture">
-                            <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/4341891528452ee712596b4ed7347532.png?thumb=1&w=200&h=200&f=webp&q=90" alt="">
+                            <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/4341891528452ee712596b4ed7347532.png?thumb=1&w=200&h=200&f=webp&q=90" alt="">
                         </div>
                         <h3>米家滚筒洗烘一体机1A 8kg 白色</h3>
                         <p class="desc">智能烘干，即洗即穿</p>
@@ -311,7 +311,7 @@
                 <div class="product">
                     <a href="#" class="content">
                         <div class="picture">
-                            <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/4c62c263dd80e807c0e1b2f67c74454c.png?thumb=1&w=200&h=200&f=webp&q=90" alt="">
+                            <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/4c62c263dd80e807c0e1b2f67c74454c.png?thumb=1&w=200&h=200&f=webp&q=90" alt="">
                         </div>
                         <h3>小米笔记本Pro 15.6" 2019款 四核i5 8G MX250 512GB 深空灰</h3>
                         <p class="desc">i5处理器 新一代独立显卡</p>
@@ -324,7 +324,7 @@
             </div>
             <div class="note9">
                 <a href="#">
-                    <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/a59db7dac2804ee2b5c7be1b02b3770e.jpg?thumb=1&w=1226&h=120&f=webp&q=90" alt="">
+                    <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/a59db7dac2804ee2b5c7be1b02b3770e.jpg?thumb=1&w=1226&h=120&f=webp&q=90" alt="">
                 </a>
             </div>
         </div>
@@ -341,7 +341,7 @@
             <div class="telephone">
                 <div class="left">
                     <a href="#">
-                        <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/cb1bd61ad71c45a4f67f09b075463944.jpeg?thumb=1&w=234&h=614&f=webp&q=90" alt="">
+                        <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/cb1bd61ad71c45a4f67f09b075463944.jpeg?thumb=1&w=234&h=614&f=webp&q=90" alt="">
                     </a>
                 </div>
                 <div class="right">
@@ -349,7 +349,7 @@
                         <li>
                             <a href="#">
                                 <div class="picture">
-                                    <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/5a260090e0e08770b0bd865845a4b4ab.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
+                                    <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/5a260090e0e08770b0bd865845a4b4ab.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
                                 </div>
                                 <h3>小米11</h3>
                                 <p class="desc">骁龙888 | 2K四曲面屏</p>
@@ -361,7 +361,7 @@
                         <li>
                             <a href="#">
                                 <div class="picture">
-                                    <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/4e75e528fb468aee107f551179aa0799.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
+                                    <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/4e75e528fb468aee107f551179aa0799.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
                                 </div>
                                 <h3>Note 9 Pro</h3>
                                 <p class="desc">一亿像素夜景相机，120Hz六档变速高刷屏</p>
@@ -373,7 +373,7 @@
                         <li>
                             <a href="#">
                                 <div class="picture">
-                                    <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/de2f71a797a74e1ca70f1fb4570bc026.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
+                                    <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/de2f71a797a74e1ca70f1fb4570bc026.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
                                 </div>
                                 <h3>Note 9</h3>
                                 <p class="desc">天玑 800U处理器，5000mAh电池，</p>
@@ -385,7 +385,7 @@
                         <li>
                             <a href="#">
                                 <div class="picture">
-                                    <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/13f10e47913f9dc82e6c6a6199f413cd.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
+                                    <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/13f10e47913f9dc82e6c6a6199f413cd.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
                                 </div>
                                 <h3>Note 9 4G</h3>
                                 <p class="desc">6000mAh长续航</p>
@@ -397,7 +397,7 @@
                         <li>
                             <a href="#">
                                 <div class="picture">
-                                    <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/d880ff45a9a3b70527770e01521fc939.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
+                                    <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/d880ff45a9a3b70527770e01521fc939.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
                                 </div>
                                 <h3>小米10 至尊版</h3>
                                 <p class="desc">120X 变焦/120W秒充/120Hz屏幕</p>
@@ -409,7 +409,7 @@
                         <li>
                             <a href="#">
                                 <div class="picture">
-                                    <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/7cf7a05df86a858a1f391a0378d8c27d.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
+                                    <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/7cf7a05df86a858a1f391a0378d8c27d.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
                                 </div>
                                 <h3>Redmi K30S 至尊纪念版</h3>
                                 <p class="desc">144Hz[7档]变速高刷屏</p>
@@ -421,7 +421,7 @@
                         <li>
                             <a href="#">
                                 <div class="picture">
-                                    <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/3b19bf0e7e599c1bbbce510fb0dbc8bc.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
+                                    <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/3b19bf0e7e599c1bbbce510fb0dbc8bc.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
                                 </div>
                                 <h3>Redmi K30 至尊版</h3>
                                 <p class="desc">120Hz弹出全面屏，天玑1000+旗舰处理器</p>
@@ -433,7 +433,7 @@
                         <li>
                             <a href="#">
                                 <div class="picture">
-                                    <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/237942bfcaf2bbe82fbe966c2f584d69.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
+                                    <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/237942bfcaf2bbe82fbe966c2f584d69.jpg?thumb=1&w=200&h=200&f=webp&q=90" alt="">
                                 </div>
                                 <h3>腾讯黑鲨3S</h3>
                                 <p class="desc">骁龙865处理器，120Hz刷新率</p>
@@ -447,12 +447,22 @@
             </div>
             <div class="Redmi">
                 <a href="#">
-                    <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/c3b86ede4dd31d7c126d56fbdde4f855.jpg?thumb=1&w=1226&h=120&f=webp&q=90" alt="">
+                    <img class="lazy" data-original="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/c3b86ede4dd31d7c126d56fbdde4f855.jpg?thumb=1&w=1226&h=120&f=webp&q=90" alt="">
                 </a>
             </div>
         </div>
         <div class="main-appliances"></div>
     </main>
+    <script src="../js/tuupola-jquery_lazyload/jquery-1.11.0.min.js"></script>
+    <script src="../js/tuupola-jquery_lazyload/jquery.lazyload.min.js"></script>
+    <script type="text/javascript" charset="utf-8">
+        $(function() {
+            $("img.lazy").lazyload({
+                effect: "fadeIn",
+                placeholder: "https://i1.mifile.cn/f/i/2014/cn/placeholder-80.png"
+            });
+        });
+    </script>
 </body>
 
 </html>
