--- a/src/html/index.html
+++ b/src/html/index.html
@@ -53,9 +53,9 @@
                     <div class="shop"></div>
                 </div>
                 <div class="top-nav-right">
-                    <a href="./login.html">登陆</a>
+                    <a href="./login.html">登录</a>
                     <span>|</span>
-                    <a href="#">注册</a>
+                    <a href="./reg.html">注册</a>
                     <span>|</span>
                     <a href="#">消息通知</a>
                 </div>
