--- a/src/html/index.html
+++ b/src/html/index.html
@@ -79,7 +79,7 @@
                     <a href="#">Select Location</a>
                 </div>
                 <div class="top-nav-car">
-                    <a href="#"><span class="iconfont">&#xf0179;</span> 购物车(0)
+                    <a href="./shopcar.html"><span class="iconfont">&#xf0179;</span> 购物车(0)
                     </a>
                     <div class="shop"></div>
                 </div>
